--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,14 @@
     "start": "nodemon index.ts"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "command-line-args": "^6.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
+    "@types/cors": "^2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
