--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -11,6 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
+      "@/ROUTES": ["../server/routes/endpoints"],
+      "@/MODELS": ["../server/models/*"]
     },
 
     /* Bundler mode */
