--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "client"
   ],
   "scripts": {
-    "start": "concurrently \"yarn workspace server start\" \"yarn workspace client start\""
+    "start": "concurrently \"yarn workspace server start\" \"yarn workspace client start\"",
+    "install:all": "concurrently \"yarn workspace server install\" \"yarn workspace client install\"",
+    "install:front": "yarn workspace client install",
+    "install:back": "yarn workspace server install"
   },
   "devDependencies": {
     "concurrently": "^9.1.2"
